migration-result/ver/16.x/database-access/introduction.mdx
---
title: Database Access
description: Teleport database access introduction, demo and resources.
version: '16.x'
---

Teleport can provide secure connections to your databases while improving both
access control and visibility.

Some of the things you can do with database access:

- Enable users to retrieve short-lived database certificates using a Single Sign-On
  flow, thus maintaining their organization-wide identity.
- Configure role-based access controls for databases and implement custom
  [Access Request](/ver/16.x/access-controls/access-requests) workflows.
- Capture database activity in the Teleport audit log.

## Demo

Let's connect to a PostgreSQL server with `psql` and pgAdmin 4 after authenticating
with GitHub, execute a few SQL queries and observe them in the audit log:

<video autoPlay loop muted playsInline controls>
  <source src="../../../../assets/dbaccessdemo-d2b07ea2a0.mp4" type="video/mp4" />

  <source src="../../../../assets/dbaccessdemo-71558a025e.webm" type="video/webm" />

  Your browser does not support the video tag.
</video>

## Getting started

- [Getting started](/ver/16.x/database-access/getting-started): Connect Aurora PostgreSQL in a 10
  minute guide.

## How to connect your database to Teleport

- [Active Directory SQL Server](/ver/16.x/database-access/guides/sql-server-ad): Connect Microsoft SQL Server with Active Directory authentication.
- [Active Directory SQL Server with PKINIT](/ver/16.x/database-access/guides/sql-server-ad-pkinit): Connect Microsoft SQL Server with Active Directory PKINIT authentication.
- [AWS DynamoDB](/ver/16.x/database-access/guides/aws-dynamodb): Connect AWS DynamoDB.
- [AWS OpenSearch](/ver/16.x/database-access/guides/aws-opensearch): Connect AWS OpenSearch.
- [AWS ElastiCache & MemoryDB](/ver/16.x/database-access/guides/redis-aws): Connect AWS ElastiCache or AWS MemoryDB for Redis database.
- [AWS RDS & Aurora](/ver/16.x/database-access/guides/rds): Connect AWS RDS or Aurora PostgreSQL, MariaDB or MySQL database.
- [AWS RDS Proxy for MariaDB/MySQL](/ver/16.x/database-access/guides/rds-proxy-mysql): Connect AWS RDS Proxy instances to Teleport.
- [AWS RDS Proxy for PostgreSQL](/ver/16.x/database-access/guides/rds-proxy-postgres): Connect AWS RDS Proxy instances to Teleport.
- [AWS RDS Proxy for SQL Server](/ver/16.x/database-access/guides/rds-proxy-sqlserver): Connect AWS RDS Proxy instances to Teleport.
- [AWS Redshift](/ver/16.x/database-access/guides/postgres-redshift): Connect AWS Redshift database.
- [AWS Redshift Serverless](/ver/16.x/database-access/guides/redshift-serverless): Connect to AWS Redshift serverless.
- [AWS Keyspaces (Apache Cassandra)](/ver/16.x/database-access/guides/aws-cassandra-keyspaces): Connect to an AWS Keyspaces database.
- [Azure PostgreSQL & MySQL](/ver/16.x/database-access/guides/azure-postgres-mysql): Connect Azure PostgreSQL or MySQL.
- [Azure Cache for Redis](/ver/16.x/database-access/guides/azure-redis): Connect Azure Cache for Redis.
- [Azure SQL Server](/ver/16.x/database-access/guides/azure-sql-server-ad): Connect Azure SQL Server with Azure Active Directory authentication.
- [GCP Cloud SQL MySQL](/ver/16.x/database-access/guides/mysql-cloudsql): Connect GCP Cloud SQL MySQL database.
- [GCP Cloud SQL PostgreSQL](/ver/16.x/database-access/guides/postgres-cloudsql): Connect GCP Cloud SQL PostgreSQL database.
- [MongoDB Atlas](/ver/16.x/database-access/guides/mongodb-atlas): Connect MongoDB Atlas cluster.
- [Self-Hosted ClickHouse](/ver/16.x/database-access/guides/clickhouse-self-hosted): Connect self-hosted ClickHouse database.
- [Self-hosted CockroachDB](/ver/16.x/database-access/guides/cockroachdb-self-hosted): Connect self-hosted CockroachDB database.
- [Self-hosted Elasticsearch](/ver/16.x/database-access/guides/elastic)
- [Self-hosted MongoDB](/ver/16.x/database-access/guides/mongodb-self-hosted): Connect self-hosted MongoDB database.
- [Self-hosted MySQL & MariaDB](/ver/16.x/database-access/guides/mysql-self-hosted): Connect self-hosted MySQL or MariaDB database.
- [Self-hosted PostgreSQL](/ver/16.x/database-access/guides/postgres-self-hosted): Connect self-hosted PostgreSQL database.
- [Self-hosted Redis Cluster](/ver/16.x/database-access/guides/redis-cluster): Connect a self-hosted Redis Cluster.
- [Self-hosted Redis](/ver/16.x/database-access/guides/redis): Connect self-hosted Redis.
- [Self-Hosted Cassandra & ScyllaDB](/ver/16.x/database-access/guides/cassandra-self-hosted): Connect self-hosted Cassandra or ScyllaDB.
- [Self-Hosted Oracle](/ver/16.x/database-access/guides/oracle-self-hosted): Connect self-hosted Oracle database.
- [Snowflake](/ver/16.x/database-access/guides/snowflake): Connect Snowflake.
- [Vitess](/ver/16.x/database-access/guides/vitess): Connect Vitess.

## Other guides

- [GUI clients](/ver/16.x/connect-your-client/gui-clients): Configure database graphical clients.
- [Dynamic Registration](/ver/16.x/database-access/guides/dynamic-registration): Register/unregister databases without restarting Teleport.
- [High Availability](/ver/16.x/database-access/guides/ha): Deploy database access in HA configuration.
- [AWS Auto-Discovery](/ver/16.x/database-access/guides/aws-discovery): Configure Teleport to discover for AWS-hosted databases.
- [AWS Cross-Account Access](/ver/16.x/database-access/guides/aws-cross-account): Connect AWS databases in external AWS accounts.

## Resources

To learn more about configuring role-based access control for database access,
check out the [RBAC](/ver/16.x/database-access/rbac) section.

The [Architecture](/ver/16.x/database-access/architecture) section provides a more in-depth look at
Teleport Database Service internals such as networking and security.

See [Reference](/ver/16.x/database-access/reference) for an overview of
database access-related configuration and CLI commands.

If you hit any issues, check out the [Troubleshooting
documentation](/ver/16.x/database-access/troubleshooting) for common problems and solutions.

## FAQ

Finally, check out [Frequently Asked Questions](/ver/16.x/database-access/faq).
